success to insert and update spatial data into Sql server

--- a/login_with_third_party/Views/Locations/Details.cshtml
+++ b/login_with_third_party/Views/Locations/Details.cshtml
@@ -10,23 +10,23 @@
     <h4>Demo</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.LocationName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.LocationName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LocationX)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Longitude)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LocationX)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Longitude)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LocationY)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Latitude)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LocationY)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Latitude)
         </dd>
     </dl>
 </div>
