--- a/login_with_third_party/Views/Locations/Create.cshtml
+++ b/login_with_third_party/Views/Locations/Create.cshtml
@@ -18,14 +18,14 @@
                 <span asp-validation-for="LocationName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LocationX" class="control-label"></label>
-                <input asp-for="LocationX" class="form-control" />
-                <span asp-validation-for="LocationX" class="text-danger"></span>
+                <label asp-for="Longitude" class="control-label"></label>
+                <input asp-for="Longitude" class="form-control" />
+                <span asp-validation-for="Longitude" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LocationY" class="control-label"></label>
-                <input asp-for="LocationY" class="form-control" />
-                <span asp-validation-for="LocationY" class="text-danger"></span>
+                <label asp-for="Latitude" class="control-label"></label>
+                <input asp-for="Latitude" class="form-control" />
+                <span asp-validation-for="Latitude" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
