--- a/login_with_third_party/Views/Locations/Delete.cshtml
+++ b/login_with_third_party/Views/Locations/Delete.cshtml
@@ -18,16 +18,16 @@
             @Html.DisplayFor(model => model.LocationName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LocationX)
+            @Html.DisplayNameFor(model => model.Longitude)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LocationX)
+            @Html.DisplayFor(model => model.Longitude)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LocationY)
+            @Html.DisplayNameFor(model => model.Latitude)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LocationY)
+            @Html.DisplayFor(model => model.Latitude)
         </dd>
     </dl>
 
